done mobile besides nav

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/hero/style.css">
     <link rel="stylesheet" href="styles/shop/shop.css">
-
+<link rel="stylesheet" href="styles/footer/footer.css">
 </head>
 <body>
     <nav>
+        <div class="mobile">
+            <svg class="main-nav__logo__image" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="45px" height="21px" viewBox="0 0 45 21" enable-background="new 0 0 45 21" xml:space="preserve"><g><rect width="3" height="21"></rect><rect x="6" width="3" height="21"></rect><rect x="12" width="3" height="21"></rect><rect x="18" width="3" height="21"></rect><g><rect x="24" y="18" width="21" height="3"></rect><rect x="24" y="12" width="21" height="3"></rect><rect x="24" y="6" width="21" height="3"></rect><rect x="24" width="21" height="3"></rect></g></g></svg>
+            <h2>Menu </h2> <img src="https://img.icons8.com/ios-filled/20/000000/menu--v1.png"/>
+        </div>
         <div class="nav-links">
-             <svg class="main-nav__logo__image" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="45px" height="21px" viewBox="0 0 45 21" enable-background="new 0 0 45 21" xml:space="preserve"><g><rect width="3" height="21"></rect><rect x="6" width="3" height="21"></rect><rect x="12" width="3" height="21"></rect><rect x="18" width="3" height="21"></rect><g><rect x="24" y="18" width="21" height="3"></rect><rect x="24" y="12" width="21" height="3"></rect><rect x="24" y="6" width="21" height="3"></rect><rect x="24" width="21" height="3"></rect></g></g></svg>
+            <svg class="main-nav__logo__image" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="45px" height="21px" viewBox="0 0 45 21" enable-background="new 0 0 45 21" xml:space="preserve"><g><rect width="3" height="21"></rect><rect x="6" width="3" height="21"></rect><rect x="12" width="3" height="21"></rect><rect x="18" width="3" height="21"></rect><g><rect x="24" y="18" width="21" height="3"></rect><rect x="24" y="12" width="21" height="3"></rect><rect x="24" y="6" width="21" height="3"></rect><rect x="24" width="21" height="3"></rect></g></g></svg>
             <h2>Live</h2>
             <h2>Push</h2>
             <h2>Link</h2>
@@ -79,6 +83,93 @@
     <p>Learn more ></p>
 </div>
 
+<div class="max-for-live">
+    <div class="max-text">
+        <h2>Max for Live</h2>
+        <p>Discover new instruments, effects and customizations for Live.</p>
+        <a href="#">Learn More</a>
+        <h3>USD 199</h3>
+        <button>Buy Now</button>
+        <h3>USD 99 </h3>
+        <button>Crossgrade</button>
+        <a href="#">What is a crossgrade?</a>
+    </div>
+</div>
+
+<div class="making-music">
+    <div class="making-music-text">
+        <h2>Making Music</h2>
+        <p>74 Creative Strategies for Electronic Music Producers. A book by Dennis DeSantis.</p>
+        <p>Download for free in the following formats: .pdf, .mobi (for Kindle), .epub (for all devices)</p>
+        <a href="">Read chapters from the book</a>
+        <p>USD 30</p>
+        <button>Buy now</button>
+        <p>Also available on Amazon Kindle and Apple Books</p>
+        <span>Published by Ableton, 340 pages, hardcover, ISBN: 978-3-9817165-0-4</span>
+    </div>
+</div>
+
+<div class="colors">
+ <div class="green">
+<div class="color-text">
+    <h2>Packs</h2>
+    <p>Expand your studio with sounds, tools and instruments for Live.</p>
+    <a href="#">Browse Packs ></a>
+</div>
+ </div>
+
+<div class="blue">
+    <div class="color-text">
+        <h2>Merchandise</h2>
+        <p>Ableton apparel, hardware accessories and more.</p>
+        <a href="#">Browse Merchandise ></a>
+    </div>
+</div>
+</div>
+
+
+
+<section class="footer">
+    <div class="methods">
+       <div class="footer-text">
+            <h2>Payment Methods</h2>
+            <p>We accept payments via Credit Card, PayPal, Installment Payments powered by Splitit, Google Pay. <a href="#">Learn More ></a></p>
+            <div class="image-div">
+                <img class="pay-images" src="https://ableton-production.imgix.net/payment-icons/visa.png?dpr=2.0&fm=png&ixjsv=1.1.3&q=50&w=81" alt="">
+                <img class="pay-images" src="https://ableton-production.imgix.net/payment-icons/mastercard.png?dpr=2.0&fm=png&ixjsv=1.1.3&q=50&w=63" alt="">
+                <img class="pay-images" src="https://ableton-production.imgix.net/payment-icons/worldpay-paypal.png?dpr=2.0&fm=png&ixjsv=1.1.3&q=50&w=63" alt="">
+                <img class="pay-images" src="https://ableton-production.imgix.net/payment-icons/google-pay.png?dpr=2.0&fm=png&ixjsv=1.1.3&q=50&w=63" alt="">
+            </div>
+       </div>
+    </div>
+
+    <div class="questions">
+      <div class="footer-text">
+            <h2>Questions?</h2>
+            <p>Don’t hesitate to get in touch with us if you have any questions before you buy Live or Push.</p>
+            <a href="#">Ask us a question ></a>
+      </div>
+    </div>
+
+<hr class="bottom-hr">
+
+<section class="foot">
+<h2>Abelton</h2>
+<b>Sign up for our newsletter</b>
+<p>Enter your email address to stay up to date with the latest offers, tutorials, downloads, surveys and more.</p>
+<form action="submit">
+    <input type="text" placeholder="Email Address">
+    <button>Sign up</button>
+</form>
+
+<div class="socials">
+<img src="./Social icons/5365678_fb_facebook_facebook logo_icon.png" alt="">
+<img src="./Social icons/5296765_camera_instagram_instagram logo_icon.svg" alt="">
+<img src="./Social icons/5296521_play_video_vlog_youtube_youtube logo_icon.png" alt="">
+<img src="./Social icons/5296514_bird_tweet_twitter_twitter logo_icon.svg" alt="">
+</div>
+</section>
+</section>
 
 
 
