--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2>Shop</h2>
           </div>  
           <div class="nav-links">
-              <h2>Try Live for Free</h2>
+              <h2><span class="blue-span">Try Live for Free</span></h2>
               <h2>Log in or register</h2>
           </div>      
     </nav>
@@ -46,7 +46,7 @@
     </div>
 
     <div class="text">
-        <h3>We make Live, Push and Link — unique software and hardware for music creation and performance. With these products, our community of users creates amazing things.</h3>
+        <h3>We make <span class="blue-span">Live, Push</span> and <span class="blue-span">Link</span> — unique software and hardware for music creation and performance. With these products, our community of users creates amazing things.</h3>
         <h4>Ableton was founded in 1999 and released the first version of Live in 2001. Our products are used by a community of dedicated musicians, sound designers, and artists from across the world.</h4>
     </div>  
     
